[gd_scene load_steps=11 format=3 uid="uid://b64fy6e8f0w5d"]

[ext_resource type="Script" path="res://assets/scripts/world.gd" id="1_04dgn"]
[ext_resource type="Script" path="res://assets/scripts/SpawnManager.gd" id="2_unp3n"]
[ext_resource type="MeshLibrary" uid="uid://chv80uhw8anfg" path="res://assets/3d/tilesSet/tileset.tres" id="3_osyca"]
[ext_resource type="PackedScene" uid="uid://bi1qnoqelk4hy" path="res://assets/scenes/key.tscn" id="5_m52ye"]
[ext_resource type="PackedScene" uid="uid://k1a675rcue17" path="res://assets/scenes/door.tscn" id="6_it5kb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kd5jq"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_3fqed"]
sky_material = SubResource("ProceduralSkyMaterial_kd5jq")

[sub_resource type="Environment" id="Environment_dvwn0"]
background_mode = 2
sky = SubResource("Sky_3fqed")
ambient_light_color = Color(0.61034, 0.804593, 0.714582, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.1
tonemap_mode = 2
fog_enabled = true
fog_light_color = Color(0.44409, 0.843166, 0.702139, 1)
fog_light_energy = 0.02
fog_density = 0.08

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmycu"]
bg_color = Color(1, 0.30578, 0.488135, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ced2p"]
bg_color = Color(0.355984, 0.700131, 0, 1)

[node name="World" type="Node"]
script = ExtResource("1_04dgn")

[node name="SpawnManager" type="Node" parent="."]
script = ExtResource("2_unp3n")

[node name="SpawnPoint1" type="Node3D" parent="SpawnManager"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="SpawnPoint2" type="Node3D" parent="SpawnManager"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -2.41, 0, 5.772)

[node name="SpawnPoint3" type="Node3D" parent="SpawnManager"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -2.41, 0, -9.001)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dvwn0")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
mesh_library = ExtResource("3_osyca")
cell_size = Vector3(2, 1, 2)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65530, 2, 65534, 65530, 2, 65533, 65530, 2, 65532, 65530, 2, 65532, 65526, 2, 65533, 65526, 2, 65534, 65526, 2, 65535, 65526, 2, 65532, 65525, 0, 65533, 65525, 0, 65534, 65525, 0, 65535, 65525, 0, 65531, 65526, 1048576, 65531, 65527, 1048576, 65531, 65528, 1048576, 65531, 65529, 1048576, 65531, 65530, 1048576, 0, 65526, 1441792, 0, 65527, 1441792, 0, 65528, 1441792, 0, 65529, 1441792, 0, 65530, 1441792, 0, 65525, 1, 65531, 65525, 1048577, 65532, 65531, 1048578, 65533, 65531, 1048578, 65534, 65531, 1048578, 65535, 65531, 1048578, 65532, 65532, 1048578, 65533, 65532, 1048578, 65534, 65532, 1048578, 65535, 65532, 1048578, 65535, 65533, 1048578, 65535, 65534, 1048578, 65535, 65535, 1048578, 65534, 65535, 1048578, 65534, 0, 1048578, 65533, 0, 1048578, 65533, 65535, 1048578, 65532, 65535, 1048578, 65532, 65534, 1048578, 65532, 65533, 1048578, 65533, 65533, 1048578, 65534, 65533, 1048578, 65534, 65534, 1048578, 65533, 65534, 1048578, 65532, 0, 1048578, 65535, 0, 1048578, 0, 65532, 1048578, 0, 65533, 1048578, 0, 65534, 1048578, 0, 65535, 1048578, 0, 0, 1048578, 0, 1, 1048578, 0, 2, 1048578, 65535, 2, 1048578, 65535, 3, 1048578, 65535, 4, 1048578, 65534, 4, 1048578, 65534, 3, 1048578, 65534, 2, 1048578, 65533, 1, 1048578, 65532, 1, 1048578, 65532, 2, 1048578, 65532, 3, 1048578, 65532, 4, 1048578, 65533, 4, 1048578, 65535, 1, 1048578, 0, 3, 1048578, 0, 4, 1048578, 65531, 65532, 1048578, 65531, 65533, 1048578, 65531, 65534, 1048578, 65531, 65535, 1048578, 65531, 0, 1048578, 65531, 1, 1048578, 65531, 2, 1048578, 65531, 3, 1048578, 65531, 8, 1048578, 65532, 5, 1048578, 65532, 6, 1048578, 65532, 7, 1048578, 65532, 8, 1048578, 65533, 5, 1048578, 65533, 6, 1048578, 65533, 7, 1048578, 65533, 8, 1048578, 65534, 8, 1048578, 65535, 8, 1048578, 0, 8, 1048578, 0, 5, 1048578, 0, 6, 1048578, 0, 7, 1048578, 65535, 5, 1048578, 65535, 6, 1048578, 65535, 7, 1048578, 65534, 5, 1048578, 65534, 6, 1048578, 65534, 7, 1048578, 65531, 65531, 1048579, 0, 65531, 3, 65530, 65531, 1048577, 1, 65531, 1, 65530, 65532, 1048576, 65530, 65533, 1048576, 65530, 65534, 1048576, 65530, 65535, 1048576, 65530, 0, 1048576, 65530, 1, 1048576, 65530, 2, 1048576, 65530, 3, 1048576, 65530, 4, 1048576, 65530, 5, 1048576, 65530, 6, 1048576, 1, 65532, 1441792, 1, 65533, 1441792, 1, 65534, 1441792, 1, 65535, 1441792, 1, 0, 1441792, 1, 1, 1441792, 1, 6, 1441792, 1, 7, 1441792, 1, 8, 1441792, 65531, 10, 1441792, 65532, 9, 655360, 65533, 10, 1048576, 65532, 11, 0, 0, 11, 1048579, 65530, 11, 1048576, 65531, 13, 655360, 65534, 13, 655360, 65535, 13, 655360, 65534, 10, 1441792, 65535, 11, 0, 65535, 9, 655360, 0, 10, 1048576, 1, 9, 1441792, 1, 10, 1441792, 1, 11, 1441792, 1, 12, 1441792, 0, 13, 655360, 1, 13, 1441793, 65530, 13, 655361, 65531, 12, 655362, 65532, 12, 655362, 65533, 12, 655362, 65534, 12, 655362, 65535, 12, 655362, 0, 12, 655362, 65534, 11, 3, 65533, 11, 1048579, 65531, 11, 3, 65531, 9, 1441795, 65534, 9, 1441795, 65533, 9, 655363, 0, 9, 655363, 65531, 4, 1048578, 65531, 5, 1048578, 65531, 6, 1048578, 65531, 7, 1048578, 65530, 7, 1048576, 65530, 8, 1048576, 65530, 9, 1048576, 65530, 10, 1048576, 65530, 12, 1048576, 1, 4, 655362, 1, 3, 655362, 1, 5, 1441795, 2, 5, 655360, 3, 5, 655360, 4, 5, 655360, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 1, 10, 5, 1441793, 10, 3, 1441792, 10, 4, 1441792, 5, 5, 655360, 9, 5, 655360, 8, 5, 655360, 6, 6, 1048576, 7, 6, 1441792, 7, 7, 1441792, 7, 8, 1441792, 7, 9, 1441792, 7, 10, 1441792, 7, 11, 1441792, 7, 12, 1441792, 7, 13, 1441792, 7, 14, 1441792, 7, 15, 1441792, 7, 16, 1441792, 7, 17, 1441792, 6, 7, 1048576, 6, 8, 1048576, 6, 9, 1048576, 6, 10, 1048576, 6, 11, 1048576, 6, 12, 1048576, 6, 13, 1048576, 6, 14, 1048576, 6, 15, 1048576, 6, 16, 1048576, 6, 17, 1048576, 5, 19, 655360, 5, 18, 0, 4, 18, 0, 3, 18, 0, 2, 18, 0, 1, 18, 0, 0, 18, 0, 65535, 18, 0, 65534, 18, 0, 4, 19, 655360, 3, 19, 655360, 2, 19, 655360, 1, 19, 655360, 0, 19, 655360, 65535, 19, 655360, 65534, 19, 655360, 65532, 14, 1048576, 65532, 15, 1048576, 65532, 16, 1048576, 65532, 17, 1048576, 65532, 18, 1048576, 65532, 19, 655361, 65533, 14, 1441792, 65533, 15, 1441792, 65533, 16, 1441792, 65533, 17, 1441792, 65533, 18, 3, 65533, 19, 655360, 6, 18, 1048579, 7, 19, 1441793, 7, 18, 1441792, 6, 19, 655360, 7, 5, 1441795, 6, 5, 655363, 2, 4, 655362, 2, 3, 655362, 3, 4, 655362, 3, 3, 655362, 4, 4, 655362, 4, 3, 655362, 5, 4, 655362, 5, 3, 655362, 6, 4, 655362, 6, 3, 655362, 7, 3, 655362, 7, 4, 655362, 8, 4, 655362, 8, 3, 655362, 9, 4, 655362, 9, 3, 655362, 65532, 13, 655363, 65533, 13, 1441795, 65534, 1, 1048578, 65533, 2, 1048578, 65533, 3, 1048578, 1, 2, 3, -65540, 65527, 5, -65539, 65528, 6, -65538, 65528, 6, -65537, 65528, 1441796, -65539, 65527, 4, -65538, 65527, 4, -65537, 65527, 1441797, -65537, 65529, 655365, -65540, 65529, 1048581, -65538, 65529, 655364, -65539, 65529, 655364, -65540, 65528, 1048580)
}
metadata/_editor_floor_ = Vector3(0, -2, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 113.0
offset_right = -485.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 18.0
offset_right = -497.0
offset_bottom = -455.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fmycu")
theme_override_styles/fill = SubResource("StyleBoxFlat_ced2p")
max_value = 2.0
value = 2.0
show_percentage = false

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.79005, 3.3287, 0)
spot_range = 5.96728
spot_angle = 66.2713

[node name="key" parent="." instance=ExtResource("5_m52ye")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -8.27205, 0.504698, 4.82859)

[node name="key2" parent="." instance=ExtResource("5_m52ye")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -8.27205, 0.504698, 3.1035)

[node name="key3" parent="." instance=ExtResource("5_m52ye")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -8.27205, 0.504698, 1.53112)

[node name="key4" parent="." instance=ExtResource("5_m52ye")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -8.27205, 0.504698, 0.236778)

[node name="key5" parent="." instance=ExtResource("5_m52ye")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -8.27205, 0.504698, -1.25758)

[node name="door" parent="." instance=ExtResource("6_it5kb")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -5.46634, 0, 6.27909)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://assets/fpc/character.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
